--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <canvas id="canvas"></canvas>
     
     <script src="js/events.js"></script>
+    <script src="js/game.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
