--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
     <script src="js/events.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/player.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
