Refactored certain events

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   
-  <body onload="load();" onresize="resize();">
+  <body>
     <canvas id="canvas"></canvas>
     
     <script src="js/events.js"></script>
