Refactored to obliterate events file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   
-  <body>
+  <body onload="load();">
     <canvas id="canvas"></canvas>
     
     <script src="js/events.js"></script>
